--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,7 +1,9 @@
 :root {
-	--turkey: #FFF0EB;
+	--background: #Fffeec;
 	--white: white;
-	--blue: blue;
+	--main-text: #493072;
+	--hero-color: #493072;
+	font-size: 18px;
 }
 
 *, *:before, *:after {
@@ -12,14 +14,15 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+	font-family:'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+	color: var(--main-text);
 }
 
 body {
 	display: grid;
 	height: 100vh;
 	grid-template-rows: auto 1fr auto;
-	background-color: var(--turkey);
+	background-color: var(--background);
 }
 
 main {
@@ -29,12 +32,12 @@ main {
 p,
 pre,
 code {
-	line-height: 1.5;
+	line-height: 1.6;
 }
 
 a[href],
 a[href]:visited {
-	color: var(--blue);
+	color: var(--hero-color);
 }
 
 a[href]:not(:hover) {
@@ -132,15 +135,15 @@ a[rel="tag"]:visited {
 	height: 2em;
   border: 1px solid var(--white);
 	background-color: var(--white);
-	color: var(--blue);
+	color: var(--main-text);
   border-radius: .25em;
   text-decoration: none;
 	margin: 0 .5em .5em 0;
 }
 
 a[rel="tag"]:hover {
-	border: 1px solid var(--blue);
-	background-color: var(--blue);
+	border: 1px solid var(--main-text);
+	background-color: var(--main-text);
 	color: var(--white);
 }
 
@@ -174,8 +177,8 @@ textarea {
 }
 
 button {
-	border: 1px solid var(--blue);
-	background-color: var(--blue);
+	border: 1px solid var(--main-text);
+	background-color: var(--main-text);
 	color: var(--white);
 	cursor: pointer;
 }
