commit footer main page image and background colour

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,5 +1,5 @@
 :root {
-	--background: #Fffeec;
+	--background: rgb(255, 255, 255);
 	--white: white;
 	--main-text: #493072;
 	--hero-color: #493072;
@@ -26,7 +26,7 @@ body {
 }
 
 main {
-	max-width: 37.5em;
+	max-width: 77.5em;
 }
 
 p,
@@ -79,6 +79,10 @@ pre {
 ul {
 	padding: 0;
 	list-style: none;
+}
+
+img{
+	width: 100%;
 }
 
 /* Header Logo (style as h2) */
@@ -187,4 +191,8 @@ button {
 	:root {
 		font-size: 1.1rem;
 	}
+}
+
+.footer-social-links {
+	padding-right: 15px;
 }
