--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,7 @@
 <footer>
   <small>
-    This project is maintained by <a href="https://www.danurbanowicz.com">Dan Urbanowicz</a>.
-    Check out the <a href="{{ pkg.repository.url }}">Github repo</a>.
+    <a class="footer-social-links" href="https://www.twitter.com/zoelenziesmith">Twitter</a> 
+    <a class="footer-social-links" href="https://linkedin.com/in/zoelenziesmith">LinkedIn</a>
+    <a class="footer-social-links" href="mailto:zoejls@gmail.com?subject=Hello%20Zoe">Email</a>
   </small>
 </footer>
